old api removed to get absolute path from api

--- a/backend/docker-conf/nginx/nginx.conf
+++ b/backend/docker-conf/nginx/nginx.conf
@@ -39,16 +39,16 @@ http {
         root /app;
         client_max_body_size 12M;
 
-        location /api {
+        location / {
             # autoindex on;
             index index.php index.html index.htm;
-            try_files $uri $uri/ /api/index.php$is_args$args;
+            try_files $uri $uri/ /public/index.php$is_args$args;
         }
 
         location /test {
             # autoindex on;
             index index.php index.html index.htm;
-            try_files $uri $uri/ /api/index.php$is_args$args;
+            try_files $uri $uri/ /public/index.php$is_args$args;
         }
 
         location ~ \.php$ {
