--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^5.23.1",
     "cra-template": "1.2.0",
     "nodemon": "^3.1.9",
     "react": "^19.0.0",
