--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -8,7 +8,8 @@ app/storage/
 public/storage
 
 storage/*.key
-/storage/nginx
+storage/nginx
+storage/framework
 .env
 Homestead.yaml
 Homestead.json
