--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
     "nodemon": "^3.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.1.3",
     "react-scripts": "5.0.1",
     "wavesurfer.js": "^7.8.16",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "env-cmd -f ./.env react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
