--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.3",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "wavesurfer.js": "^7.8.16",
     "web-vitals": "^4.2.4"
