Audio convert to transcript added

--- a/backend/docker-conf/nginx/nginx.conf
+++ b/backend/docker-conf/nginx/nginx.conf
@@ -36,13 +36,12 @@ http {
         listen [::]:8020;
         server_name _;
 
-        root /app;
+        root /app/public;
         client_max_body_size 12M;
 
         location / {
-            # autoindex on;
             index index.php index.html index.htm;
-            try_files $uri $uri/ /public/index.php$is_args$args;
+            try_files $uri /index.php$is_args$args;
         }
 
         location /test {
@@ -52,12 +51,11 @@ http {
         }
 
         location ~ \.php$ {
-            try_files $uri =404;
+            include fastcgi_params;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             fastcgi_pass php:9000;
             fastcgi_index index.php;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param SCRIPT_FILENAME /app/public$fastcgi_script_name;
             fastcgi_param PATH_INFO $fastcgi_path_info;
         }
     }
