Confetti added for success

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^5.23.1",
+    "canvas-confetti": "^1.9.3",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
     "env-cmd": "^10.1.0",
